# opencv-warco

./: CMakeLists.txt  README.md  SampleInput.json  covcorr.cpp  covcorr.hpp  cvutils.cpp  cvutils.hpp  dists.cpp  dists.hpp  features.cpp  features.hpp  filterbank.cpp  filterbank.hpp  main.cpp  mainutils.cpp  mainutils.hpp  model.cpp  model.hpp  pred.cpp  to_s.hpp  train.cpp  traintest.cpp  utest.cpp  warco.cpp  warco.hpp
